# ai_coding_site_v2

./: .env.example  .gitignore  .gitmodules  .tmp-debug-prompt.md  AGENTS.md  MANIFEST.in  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
docs/: README.md
flows/: 01_create_top_level_node_flow.md  02_compile_or_recompile_workflow_flow.md  03_materialize_and_schedule_children_flow.md  04_manual_tree_edit_and_reconcile_flow.md  05_admit_and_execute_node_run_flow.md  06_inspect_state_and_blockers_flow.md  07_pause_resume_and_recover_flow.md  08_handle_failure_and_escalate_flow.md  09_run_quality_gates_flow.md  10_regenerate_and_rectify_flow.md  11_finalize_and_merge_flow.md  12_query_provenance_and_docs_flow.md  13_human_gate_and_intervention_flow.md  14_project_bootstrap_and_yaml_onboarding_flow.yaml  15_epic_default_workflow_blueprint_flow.yaml  16_phase_default_workflow_blueprint_flow.yaml  17_plan_default_workflow_blueprint_flow.yaml  18_task_default_workflow_blueprint_flow.yaml  19_hook_expansion_compile_stage_flow.yaml  20_compile_failure_and_reattempt_flow.yaml  21_child_session_round_trip_and_mergeback_flow.yaml  22_dependency_blocked_sibling_wait_flow.yaml  README.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  playwright.real.config.js  vite.config.js
layouts/: generated_layout.yaml
notes/: action_automation_matrix.md  auditability_checklist.md  authority_and_api_model.md  child_materialization_and_scheduling.md  child_session_mergeback_contract.md  cli_surface_spec_revised.md  code_vs_yaml_delineation.md  common_user_journeys_analysis.md  compile_failure_persistence.md  cross_spec_gap_matrix.md  cutover_policy_note.md  database_schema_v2_expansion.md  default_yaml_library_plan.md  full_spec_expansion_plan.md  hook_expansion_algorithm.md  hypothetical_plan_workthrough.md  implementation_slicing_plan.md  invalid_dependency_graph_handling.md  major_feature_inventory.md  manual_vs_auto_tree_interaction.md  node_lifecycle_spec_v2.md  original_concept.md  override_conflict_semantics.md  override_versioning_note.md  parent_failure_decision_spec.md  pause_workflow_event_persistence.md  prompt_library_plan.md  provenance_identity_strategy.md  review_testing_docs_yaml_plan.md  runtime_command_loop_spec_v2.md  runtime_environment_policy_note.md  runtime_pseudocode_plan.md  runtime_tuning_matrix.md  session_recovery_appendix.md  spec_traceability_matrix.md  state_value_catalog.md  yaml_builtins_checklist.md  yaml_inventory_v2.md  yaml_schemas_spec_v2.md
plan/: README.md
scripts/: _common.sh  downgrade-db.sh  rebuild.sh  (+9 more)
(+1913 files in other folders)
